chore: removed unused operator && and removed some warnings